@@ -153,9 +153,7 @@ class MutableTree(tree.Tree):
         if not 'branch-nick' in revprops:
             revprops['branch-nick'] = self.branch.nick
         # args for wt.commit start at message from the Commit.commit method,
-        # but with branch a kwarg now, passing in args as is results in the
-        #message being used for the branch
-        args = (DEPRECATED_PARAMETER, message, ) + args
+        args = (message, ) + args
         committed_id = commit.Commit().commit(working_tree=self,
             revprops=revprops, *args, **kwargs)
         return committed_id
