@@ -1,5 +1,10 @@
 IN DEVELOPMENT
 
+  INTERNALS:
+
+    * bzrlib API compatability with 0.8 has been dropped, cleaning up some
+      code paths. (Robert Collins)
+
   NOTES WHEN UPGRADING:
         
     * Release 0.15rc2 of bzr changes the ``bzr init-repo`` command to
